# gpui-component

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/skills/gpui-test/: SKILL.md
.github/workflows/: release-docs.yml
crates/assets/: Cargo.toml
crates/story/: Cargo.toml
crates/story-web/: Cargo.toml  Makefile  README.md
crates/story-web/scripts/: build-wasm.sh
crates/story-web/src/: lib.rs
crates/story-web/www/: .gitignore  index.html  package.json  vite.config.js
crates/story-web/www/src/: main.js
crates/story/examples/: dock.rs  editor.rs  large-text.rs  markdown.rs  tiles.rs
crates/story/src/: gallery.rs  lib.rs  main.rs  themes.rs  title_bar.rs
crates/ui/: Cargo.toml
crates/ui/locales/: ui.yml
crates/ui/src/: accordion.rs  color_picker.rs  combobox.rs  dialog.rs  geometry.rs  global_state.rs  hover_card.rs  lib.rs  notification.rs  popover.rs  root.rs  select.rs  skeleton.rs  slider.rs  spinner.rs  styled.rs  switch.rs  title_bar.rs  tooltip.rs  tree.rs  window_border.rs  window_ext.rs
crates/ui/src/dialog/: mod.rs  (+5 more)
crates/webview/src/: lib.rs
docs/: skills.vue
docs/docs/: getting-started.md
docs/docs/components/: data-table.md  dialog.md  index.md  settings.md  table.md
examples/: color_mix_oklab.rs
examples/app_assets/src/: main.rs
examples/dialog_overlay/src/: main.rs
examples/focus_trap/src/: main.rs
examples/hello_world/src/: main.rs
examples/input/src/: main.rs
examples/system_monitor/src/: main.rs
examples/webview/src/: main.rs
examples/window_title/src/: main.rs
skills/gpui/references/: layout-style.md
(+86 files in other folders)
